--- a/AdminLTE-custom/public/template_admin/css/pippeline_v2/pipeline_v2.css
+++ b/AdminLTE-custom/public/template_admin/css/pippeline_v2/pipeline_v2.css
@@ -1,6 +1,26 @@
 .top {
   margin-top: 20px; }
 
+.modal textarea {
+  padding: 10px; }
+.modal-footer .save-modal {
+  width: 100%;
+  height: 45px;
+  position: relative; }
+  .modal-footer .save-modal .btn-save {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    padding: 3px 10px;
+    border-radius: 3px;
+    background: #428bca;
+    color: #fff;
+    cursor: pointer;
+    transition: all 0.6s; }
+    .modal-footer .save-modal .btn-save:hover {
+      background: #7aa6cc; }
+
 .edit-deal .modal-body {
   margin-top: 10px; }
 .edit-deal .modal-content {
