--- a/AdminLTE-custom/public/template_admin/sass/pippeline_v2/pipeline_v2.scss
+++ b/AdminLTE-custom/public/template_admin/sass/pippeline_v2/pipeline_v2.scss
@@ -2,6 +2,33 @@ $color_main: #dd4b39;
 .top {
 	margin-top: 20px;
 }
+.modal {
+	textarea {
+		padding: 10px;
+	}
+	&-footer {
+		.save-modal {
+			width: 100%;
+			height: 45px;
+			position: relative;
+			.btn-save {
+				position: absolute;
+				top: 50%;
+				transform: translateY(-50%);
+				right: 0;
+				padding: 3px 10px;
+				border-radius: 3px;
+				background: #428bca;
+				color: #fff;
+				cursor: pointer;
+				transition: all 0.6s;
+				&:hover {
+					background: #7aa6cc;
+				}
+			}
+		}
+	}
+}
 // pipepine edit v2
 .edit-deal {
 	.modal-body {
