--- a/AdminLTE-custom/public/template_admin/css/pippeline_v2/pipeline_v2.css
+++ b/AdminLTE-custom/public/template_admin/css/pippeline_v2/pipeline_v2.css
@@ -21,8 +21,6 @@
     .modal-footer .save-modal .btn-save:hover {
       background: #7aa6cc; }
 
-.edit-deal .modal-body {
-  margin-top: 10px; }
 .edit-deal .modal-content {
   width: 800px;
   border-radius: 5px; }
@@ -34,6 +32,13 @@
     transform: translateY(-50%); }
   .edit-deal .modal-header .modal-title {
     padding: 0 35px; }
+    .edit-deal .modal-header .modal-title .name-modal-edit {
+      width: 95%;
+      border: 1px solid #ddd;
+      outline: none;
+      font-size: 14px;
+      height: 35px;
+      padding-left: 10px; }
   .edit-deal .modal-header .delete {
     position: absolute;
     top: 50%;
@@ -44,6 +49,22 @@
     cursor: pointer; }
     .edit-deal .modal-header .delete:hover {
       color: #cd0000; }
+  .edit-deal .modal-header .icon-edit {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 50px;
+    font-size: 20px;
+    color: #3e3e3e;
+    cursor: pointer;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.6s;
+    z-index: 9999999;
+    color: #5cb85c; }
+  .edit-deal .modal-header:hover .icon-edit {
+    opacity: 1;
+    visibility: visible; }
 .edit-deal__form-namevalue .edit-name, .edit-deal__form-namevalue .edit-value {
   width: calc((100% - 20px)/2);
   float: left; }
@@ -328,7 +349,8 @@
 .edit-deal .modal-body {
   padding-left: 5px;
   padding-right: 5px;
-  padding-bottom: 10px; }
+  padding-bottom: 10px;
+  margin-top: 10px; }
   .edit-deal .modal-body__content {
     width: calc(100% - 165px);
     float: left;
