--- a/AdminLTE-custom/public/template_admin/sass/pippeline_v2/pipeline_v2.scss
+++ b/AdminLTE-custom/public/template_admin/sass/pippeline_v2/pipeline_v2.scss
@@ -284,7 +284,9 @@ $color_main: #dd4b39;
 						color: #ddd;
 					}
 					.desc-file {
-						.desctiption-file {
+						margin-top: 10px;
+						margin-bottom: 10px;
+						.description-file {
 							width: 100%;
 							border: none;
 							outline: none;
