--- a/AdminLTE-custom/public/template_admin/css/pippeline_v2/pipeline_v2.css
+++ b/AdminLTE-custom/public/template_admin/css/pippeline_v2/pipeline_v2.css
@@ -210,15 +210,18 @@
       .edit-deal__attach-content .item-attach__content .info-creator {
         font-size: 12px;
         color: #ddd; }
-      .edit-deal__attach-content .item-attach__content .desc-file .desctiption-file {
-        width: 100%;
-        border: none;
-        outline: none;
-        background: #f5f5f5;
-        padding: 5px;
-        color: #ddd;
-        font-size: 12px;
-        font-style: initial; }
+      .edit-deal__attach-content .item-attach__content .desc-file {
+        margin-top: 10px;
+        margin-bottom: 10px; }
+        .edit-deal__attach-content .item-attach__content .desc-file .description-file {
+          width: 100%;
+          border: none;
+          outline: none;
+          background: #f5f5f5;
+          padding: 5px;
+          color: #ddd;
+          font-size: 12px;
+          font-style: initial; }
       .edit-deal__attach-content .item-attach__content .action-item {
         position: relative; }
         .edit-deal__attach-content .item-attach__content .action-item .list {
