--- a/AdminLTE-custom/public/template_admin/css/pippeline_v2/pipeline_v2.css
+++ b/AdminLTE-custom/public/template_admin/css/pippeline_v2/pipeline_v2.css
@@ -510,6 +510,12 @@
     .edit-deal .comfirm-action__chose a:last-child {
       margin-left: 20px; }
 
+.table-item .box-content .background-image {
+  height: 60px;
+  margin-bottom: 10px; }
+  .table-item .box-content .background-image img {
+    object-fit: cover; }
+
 .changer-background {
   position: absolute;
   top: -62px;
