--- a/AdminLTE-custom/public/template_admin/sass/pippeline_v2/pipeline_v2.scss
+++ b/AdminLTE-custom/public/template_admin/sass/pippeline_v2/pipeline_v2.scss
@@ -708,6 +708,17 @@ $color_main: #dd4b39;
 		}
 	}
 }
+.table-item {
+	.box-content {
+		.background-image {
+			height: 60px;
+			margin-bottom: 10px;
+			img {
+				object-fit: cover;
+			}
+		}
+	}
+}
 .changer-background {
 	position: absolute;
 	top: -62px;
