--- a/AdminLTE-custom/public/template_admin/sass/pippeline_v2/pipeline_v2.scss
+++ b/AdminLTE-custom/public/template_admin/sass/pippeline_v2/pipeline_v2.scss
@@ -807,4 +807,9 @@ $color_main: #dd4b39;
 		overflow: hidden;
 	}
 }
+@media (min-width: 768px) and (max-width: 1190px){
+	.edit-deal .modal-content {
+	    width: 100%!important;
+	}
+}
 
