--- a/AdminLTE-custom/public/template_admin/css/pippeline_v2/pipeline_v2.css
+++ b/AdminLTE-custom/public/template_admin/css/pippeline_v2/pipeline_v2.css
@@ -118,6 +118,9 @@
       padding: 10px;
       background: #f2f7f5;
       margin-left: 20px; }
+  .edit-deal__form-information .box-video__content iframe {
+    width: 100%;
+    height: 308px; }
   .edit-deal__form-information .notes {
     padding-left: 10px;
     padding-top: 10px; }
@@ -516,6 +519,21 @@
   .table-item .box-content .background-image img {
     object-fit: cover; }
 
+#edit_add_label .label-content .list-label .item-label {
+  width: 80px;
+  height: 30px;
+  display: inline-block;
+  margin-right: 10px;
+  cursor: pointer;
+  margin-bottom: 10px;
+  position: relative; }
+  #edit_add_label .label-content .list-label .item-label .check-label {
+    position: absolute;
+    left: 5px;
+    top: 0;
+    font-size: 15px;
+    opacity: 0; }
+
 .changer-background {
   position: absolute;
   top: -62px;
@@ -574,6 +592,51 @@
         display: inline-block; }
         .changer-background .background-item ul li:nth-child(4n+4) {
           margin-right: 0; }
+
+#edit_deal_user .contact-deal .form-seach-contact input {
+  width: 100%;
+  height: 35px;
+  padding-left: 10px;
+  border-radius: 3px;
+  border: 1px solid #ddd; }
+#edit_deal_user .title {
+  font-size: 15px;
+  font-weight: 600; }
+#edit_deal_user .list-contact-modal {
+  max-height: 450px;
+  overflow: auto; }
+  #edit_deal_user .list-contact-modal .item-contact {
+    margin-bottom: 10px;
+    position: relative;
+    background: #f5f5f5;
+    padding: 5px;
+    cursor: pointer; }
+    #edit_deal_user .list-contact-modal .item-contact__image {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      overflow: hidden;
+      float: left; }
+      #edit_deal_user .list-contact-modal .item-contact__image img {
+        object-fit: contain; }
+    #edit_deal_user .list-contact-modal .item-contact__info {
+      width: calc(100% - 80px);
+      float: right;
+      position: relative;
+      padding-left: 30px; }
+      #edit_deal_user .list-contact-modal .item-contact__info .name {
+        font-weight: 600;
+        font-size: 15px;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 30px; }
+    #edit_deal_user .list-contact-modal .item-contact .check {
+      position: absolute;
+      top: 0;
+      right: 0;
+      color: #3e3e3e;
+      opacity: 0; }
 
 @media only screen and (min-width: 1920px) {
   body {
