--- a/AdminLTE-custom/public/template_admin/sass/pippeline_v2/pipeline_v2.scss
+++ b/AdminLTE-custom/public/template_admin/sass/pippeline_v2/pipeline_v2.scss
@@ -237,6 +237,10 @@ $color_main: #dd4b39;
 				}
 				.remind {
 					background: #f0ad4e;
+				    padding: 2px 3px;
+				    position: absolute;
+				    top: 1px;
+				    left: -25px;
 					&:hover {
 						background: #eccc9e;
 					}
@@ -341,6 +345,7 @@ $color_main: #dd4b39;
 							font-size: 12px;
 							cursor: pointer;
 							transition: all 0.6s;
+							font-weight: 600;
 							i {
 								margin-right: 3px;
 							}
@@ -578,6 +583,7 @@ $color_main: #dd4b39;
 					&-remind {
 						background: #aaaaaa;
 						transition: all 0.6s;
+						
 						&:hover {
 							background: #ccc;
 						}
@@ -627,10 +633,25 @@ $color_main: #dd4b39;
 						&-icon {
 							width: 20px;
 							float: left;
+							font-size: 16px;
 						}
 						&-text {
 							width: calc(100% - 20px);
 							float: right;
+						}
+					}
+					.complete {
+						cursor: pointer;
+					}
+					.show-enddate {
+						margin-top: 5px;
+						background: #cd0000;
+						color: #fff;
+						p {
+							padding: 5px;
+						}
+						i {
+							margin: 0 5px;
 						}
 					}
 					&-content {
@@ -884,6 +905,13 @@ $color_main: #dd4b39;
 			}
 		}
 	}
+}
+
+.image-remind {
+	width: 15px;
+	height: 15px;
+	filter: invert(1);
+	filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
 }
 
 @media only screen and (min-width:1920px) {
